# medallion-spark-and-hadoop

./: .gitignore  README.md  docker-compose.yml
hadoop/: Dockerfile  create_hdfs_dir.sh  entrypoint.sh
hadoop/config/: hdfs-site.xml
postgres/: Dockerfile  init.db
retail_app/: Dockerfile  app.py  pyproject.toml
spark/: Dockerfile  pyproject.toml
spark/email/: send_email.py
spark/excel/: df_to_excel.py
spark/orchestrator/: scheduler.py
spark/pipeline/: ingestion.py  scheduler.py  serving.py  transformation.py
