[tool.poetry]
name = "retail-app"
version = "0.1.0"
description = ""
authors = ["Kaua Onorato <kauaonorato.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^37.3.0"
psycopg2-binary = "^2.9.10"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
