[tool.poetry]
name = "spark"
version = "0.1.0"
description = ""
authors = ["Kaua Onorato <kauaonorato.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "4.0.0"
dotenv = "0.9.9"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
